--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==0.31.0
 bitsandbytes==0.43.1
 ExifRead==3.0.0
 imagesize==1.4.1
+imageio==2.34.1
 pillow==10.3.0
 pyparsing==3.1.2
 PySide6==6.7.1
